itk: update to 5.4.2

--- a/mingw-w64-itk/PKGBUILD
+++ b/mingw-w64-itk/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=itk
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.4.0
-pkgrel=2
+pkgver=5.4.2
+pkgrel=1
 pkgdesc='An open-source C++ toolkit for medical image processing (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -59,15 +59,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 optdepends=("${MINGW_PACKAGE_PREFIX}-opencv: ITK-OpenCV bridge"
             "${MINGW_PACKAGE_PREFIX}-vtk: ITK-VTK bridge")
 source=("https://github.com/InsightSoftwareConsortium/ITK/archive/v${pkgver}/ITK-${pkgver}.tar.gz")
-sha256sums=('d71a36fc0aee2c9257fe128f7657feb1e671461bd48561b620619f290c71795e')
-
-prepare() {
-  cd "${srcdir}"/ITK-${pkgver}
-}
+sha256sums=('931c4edf7ae57eede3fc611992941edce64bea508cf5c8741c2a4c2f56eceff1')
 
 build() {
-  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
-
   local -a _extra_config
   if check_option "debug" "n"; then
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
@@ -76,8 +70,8 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake.exe \
-    -G"Ninja" \
+  cmake \
+    -GNinja \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     -DBUILD_SHARED_LIBS=ON \
     -DBUILD_DOCUMENTATION=OFF \
@@ -128,24 +122,23 @@ build() {
     -DVNL_CONFIG_ENABLE_SSE2_ROUNDING=ON \
     -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python \
     "${_extra_config[@]}" \
-    "../ITK-${pkgver}"
+    -S "ITK-${pkgver}" \
+    -B "build-${MSYSTEM}"
 
-  ${MINGW_PREFIX}/bin/cmake --build .
+  cmake --build "build-${MSYSTEM}"
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
-  DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install .
+  DESTDIR=${pkgdir} cmake --install "build-${MSYSTEM}"
 
-  cd "${pkgdir}${MINGW_PREFIX}"
   local PREFIX_DEPS=$(cygpath -am ${MINGW_PREFIX})
   sed -s "s|${PREFIX_DEPS}|\${_IMPORT_PREFIX}|g" \
-    -i "lib/cmake/${_realname}/ITKTargets-release.cmake"
-  find "lib/cmake/${_realname}" -name '*.cmake' -exec \
+    -i "${pkgdir}${MINGW_PREFIX}/lib/cmake/${_realname}/ITKTargets-release.cmake"
+  find "${pkgdir}${MINGW_PREFIX}/lib/cmake/${_realname}" -name '*.cmake' -exec \
     sed -s "s|${PREFIX_DEPS}|\${ITK_INSTALL_PREFIX}|g" -i {} \;
 
-  install -Dm644 "${srcdir}/ITK-${pkgver}/LICENSE" "share/licenses/${_realname}/LICENSE"
-  install -Dm644 "${srcdir}/ITK-${pkgver}/NOTICE" "share/licenses/${_realname}/NOTICE"
-  install -Dm644 "${srcdir}/ITK-${pkgver}/Modules/ThirdParty/KWSys/src/KWSys/Copyright.txt" \
-    "share/licenses/${_realname}/KWSys/Copyright.txt"
+  install -Dm644 "ITK-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "ITK-${pkgver}/NOTICE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/NOTICE"
+  install -Dm644 "ITK-${pkgver}/Modules/ThirdParty/KWSys/src/KWSys/Copyright.txt" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/KWSys/Copyright.txt"
 }
