python-bottle: update to 0.13.2

--- a/mingw-w64-python-bottle/PKGBUILD
+++ b/mingw-w64-python-bottle/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=bottle
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.12.25
-pkgrel=2
+pkgver=0.13.2
+pkgrel=1
 pkgdesc="A fast and simple python micro-framework for small web-applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -23,8 +23,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('e1a9c94970ae6d710b3fb4526294dfeb86f2cb4a81eff3a4b98dc40fb0e5e021')
+sha256sums=('e53803b9d298c7d343d00ba7d27b0059415f04b9f6f40b8d58b5bf914ba9d348')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
@@ -39,7 +40,7 @@ package() {
     --destdir="${pkgdir}" dist/*.whl
 
   # Undo path translation
-  for _f in "${pkgdir}${MINGW_PREFIX}"/bin/*; do
+  for _f in "${pkgdir}${MINGW_PREFIX}"/bin/*.py; do
     sed -e '1 { s/^#!.*python.*$/#!\/usr\/bin\/env python3/ }' -i ${_f}
   done
 
