python-jaraco.context: update to 6.0.1

--- a/mingw-w64-python-jaraco.context/PKGBUILD
+++ b/mingw-w64-python-jaraco.context/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: @naveen521kk on Github, Naveen M K <naveen521kk@gmail.com>
 
-_pyname=jaraco.context
+_pyname=jaraco_context
 _realname=jaraco.context
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.3.0
-pkgrel=3
+pkgver=6.0.1
+pkgrel=1
 pkgdesc='Context managers by jaraco (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,12 +24,12 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
 )
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('4dad2404540b936a20acedec53355bdaea223acb88fd329fa6de9261c941566e')
+sha256sums=('9bae4ea555cf0b14938dc0aee7c9f32ed303aa20a3b73e7dc80111628792d1b3')
 
 prepare() {
   cd "$srcdir"
   rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname//_/-}-$pkgver" "python-build-${MSYSTEM}"
+  cp -r "${_pyname}-$pkgver" "python-build-${MSYSTEM}"
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
 }
 
