python-markups: update to 4.1.0

--- a/mingw-w64-python-markups/PKGBUILD
+++ b/mingw-w64-python-markups/PKGBUILD
@@ -1,17 +1,13 @@
 # Maintainer: J. Peter Mugaas <jpmugaas@suddenlink.net>
 
-_pyname=Markups
 _realname=markups
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=4.0.0
-pkgrel=4
+pkgver=4.1.0
+pkgrel=1
 pkgdesc="Wrapper around various text markups (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: Markups'
 )
@@ -24,8 +20,8 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-python-docutils: for reStructuredText langu
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('3ddb9afb1c55d0cff812e3392ca33f468498c0707a4fa8b2e05d0ba0d32c019e')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('25214434f356d353034c2ef4db76ab50e867a63ba1967eb6bcc80472c501ddd9')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
