libpcap: Update to 1.10.5

--- a/mingw-w64-libpcap/PKGBUILD
+++ b/mingw-w64-libpcap/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libpcap
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.10.4
+pkgver=1.10.5
 pkgrel=1
 pkgdesc="A system-independent interface for user-level packet capture (mingw-w64)"
 arch=('any')
@@ -13,7 +13,10 @@ msys2_references=(
   "cpe: cpe:/a:tcpdump:libpcap"
 )
 license=('spdx:BSD-3-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-openssl")
+depends=(
+  "${MINGW_PACKAGE_PREFIX}-openssl"
+  "${MINGW_PACKAGE_PREFIX}-libwinpthread"
+)
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
@@ -21,7 +24,7 @@ source=("https://www.tcpdump.org/release/${_realname}-${pkgver}.tar.gz"{,.sig}
         "0001-cmake-install-rpcapd-bindir.patch"
         "0002-cmake-keep-lib-prefixed-dll.patch"
         "0003-charconv-include-errno.patch")
-sha256sums=('ed19a0383fad72e3ad435fd239d7cd80d64916b87269550159d20e47160ebe5f'
+sha256sums=('37ced90a19a302a7f32e458224a00c365c117905c2cd35ac544b6880a81488f0'
             'SKIP'
             'c3b177c92d76fd0300b1d2d1cb7975f9dc393d5c0286d83a3e22bfdafdf265f4'
             '09dfe0f962a99df7d1d8fdb9bb9b320b6d33e0a7c2efec136065a7b359de188d'
@@ -48,6 +51,7 @@ build() {
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G "Ninja" \
+    -DPCAP_TYPE=null \
     -Wno-dev \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     "${_extra_config[@]}" \
