python-aioresponses: Update to 0.7.7

--- a/mingw-w64-python-aioresponses/PKGBUILD
+++ b/mingw-w64-python-aioresponses/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=aioresponses
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.7.6
-pkgrel=2
+pkgver=0.7.7
+pkgrel=1
 pkgdesc='A helper to mock/fake web requests in python aiohttp package. (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,6 +15,7 @@ msys2_references=(
 url="https://github.com/pnuckowski/aioresponses"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-aiohttp")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
@@ -24,7 +25,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-asynctest"
               "${MINGW_PACKAGE_PREFIX}-python-ddt"
               "${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('f795d9dbda2d61774840e7e32f5366f45752d1adc1b74c9362afd017296c7ee1')
+sha256sums=('66292f1d5c94a3cb984f3336d806446042adb17347d3089f2d3962dd6e5ba55a')
 
 prepare() {
   export PBR_VERSION=$pkgver
