--- a/mingw-w64-python-argcomplete/PKGBUILD
+++ b/mingw-w64-python-argcomplete/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=argcomplete
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.5.0
-pkgrel=2
+pkgver=3.5.3
+pkgrel=1
 pkgdesc="Easy, extensible command line tab completion of arguments for your Python script (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,11 +17,11 @@ license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
+             "${MINGW_PACKAGE_PREFIX}-python-hatchling"
+             "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('4349400469dccfb7950bb60334a680c58d88699bff6159df61251878dc6bf74b')
+sha256sums=('c12bf50eded8aebb298c7b7da7a5ff3ee24dffd9f5281867dfe1424b58c55392')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
