python-imgviz: Update to 1.7.6

--- a/mingw-w64-python-imgviz/PKGBUILD
+++ b/mingw-w64-python-imgviz/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=imgviz
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.7.5
-pkgrel=3
+pkgver=1.7.6
+pkgrel=1
 pkgdesc='Image Visualization Tools (object detection, semantic and instance segmentation) (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,10 +19,12 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-pillow"
          "${MINGW_PACKAGE_PREFIX}-python-yaml")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-hatchling"
+             "${MINGW_PACKAGE_PREFIX}-python-hatch-fancy-pypi-readme"
+             "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('dad88868aa450deb105e08c389d3cc7ffd4f62cc7bc30885e33ce38ba2919a89')
+sha256sums=('4708429c90a3220ac39fa8ad330908fdbdec4fffca01b514a7f581241a536107')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
