python-debugpy: Update to 1.8.11

--- a/mingw-w64-python-debugpy/PKGBUILD
+++ b/mingw-w64-python-debugpy/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=debugpy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.8.6
-pkgrel=2
+pkgver=1.8.11
+pkgrel=1
 pkgdesc="An implementation of the Debug Adapter Protocol for Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,8 +20,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-cc")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.zip")
-sha256sums=('c931a9371a86784cee25dec8d65bc2dc7a21f3f1552e3833d9ef8f919d22280a')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('6ad2688b69235c43b020e04fecccdf6a96c8943ca9c2fb340b8adc103c655e57')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
