--- a/mingw-w64-python-kombu/PKGBUILD
+++ b/mingw-w64-python-kombu/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=kombu
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-$_realname")
-pkgver=5.4.0
+pkgver=5.4.2
 pkgrel=1
 pkgdesc='A messaging library for Python (mingw-w64)'
 arch=('any')
@@ -18,6 +18,7 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-amqp"
   "${MINGW_PACKAGE_PREFIX}-python-vine"
+  "${MINGW_PACKAGE_PREFIX}-python-tzdata"
 )
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
@@ -55,7 +56,7 @@ optdepends=(
 )
 
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ad200a8dbdaaa2bbc5f26d2ee7d707d9a1fded353a0f4bd751ce8c7d9f449c60')
+sha256sums=('eef572dd2fd9fc614b37580e3caeafdd5af46c1eff31e7fba89138cdb406f2cf')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
