ossia-score: add repo URL

--- a/mingw-w64-ossia-score/PKGBUILD
+++ b/mingw-w64-ossia-score/PKGBUILD
@@ -9,6 +9,7 @@ pkgdesc="ossia score, an interactive sequencer for the intermedia arts"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
 url="https://ossia.io"
+msys2_repository_url="https://github.com/ossia/score"
 license=('spdx:GPL-3.0-or-later')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-qt6-base"
