dbcsr: update to 2.8.0

--- a/mingw-w64-dbcsr/PKGBUILD
+++ b/mingw-w64-dbcsr/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=dbcsr
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.7.0
+pkgver=2.8.0
 pkgrel=1
 pkgdesc="Distributed Block Compressed Sparse Row matrix library (mingw-w64)"
 arch=('any')
@@ -20,10 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-python")
+             #"${MINGW_PACKAGE_PREFIX}-python-fypp")
 source=("https://github.com/cp2k/dbcsr/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "001-fix-build-on-mingw.patch")
-sha256sums=('25c367b49fb108c5230bcfb127f05fc16deff2bb467f437023dfa6045aff66f6'
-            '8d2775a36ddbce65fa45fcdb8c76a1bae3c83b99915d50475831b8cf8c87b346')
+sha256sums=('d55e4f052f28d1ed0faeaa07557241439243287a184d1fd27f875c8b9ca6bd96'
+            '3a3620ab94d7f0abc6ab5fcb32671e4489e1fbf973d7e0680ee76374f9faf897')
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
@@ -47,7 +48,7 @@ build() {
       -DBUILD_SHARED_LIBS=ON \
       -DUSE_OPENMP=ON \
       -DUSE_MPI=OFF \
-      -DWITH_C_API=ON \
+      -DWITH_C_API=OFF \
       -DBLA_VENDOR=OpenBLAS \
       -DBUILD_TESTING=OFF \
       -DWITH_EXAMPLES=OFF \
