--- a/mingw-w64-python-async-timeout/PKGBUILD
+++ b/mingw-w64-python-async-timeout/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=async-timeout
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.0.3
-pkgrel=2
+pkgver=5.0.1
+pkgrel=1
 pkgdesc='Asyncio-compatible timeout class (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/aio-libs/async-timeout"
 msys2_references=(
   'pypi: async-timeout'
@@ -16,30 +16,31 @@ license=('Apache')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools" "${MINGW_PACKAGE_PREFIX}-python-docutils")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-cov")
-source=("https://github.com/aio-libs/async-timeout/archive/v${pkgver}.tar.gz")
-sha256sums=('c63f1252d5fa878fdceb7a6894f1df6a73f92546e52a0b7999a5de429fd64ff8')
+source=("https://github.com/aio-libs/async-timeout/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('928c37731c8d24daa04ec421b0a1c60d5e52e6aa4dc02d3febc17efd66a26861')
 
 prepare() {  
   cd "$srcdir"
-  rm -rf python-build-${CARCH} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${CARCH}"
+  rm -rf python-build-${MSYSTEM} | true
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  msg "Python build for ${CARCH}"  
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
 check() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   PYTHONPATH=. ${MINGW_PREFIX}/bin/py.test tests || warning "Tests failed"
 }
 
 package() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
+
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
     --root="${pkgdir}" --optimize=1 --skip-build
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
