--- a/mingw-w64-python-websockets/PKGBUILD
+++ b/mingw-w64-python-websockets/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=websockets
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=13.1
-pkgrel=2
+pkgver=14.1
+pkgrel=1
 pkgdesc='Library for building WebSocket servers and clients in Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,11 +18,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-cc"
-             'tar')
-source=("${_realname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz")
+             "${MINGW_PACKAGE_PREFIX}-cc")
+source=("${url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
 noextract=("${_realname}-${pkgver}.tar.gz")
-sha256sums=('39345b087381694ca06c5b2b922aa8c2a54dc8f08fcaee358eafaa2222c4dd22')
+sha256sums=('822f3c2bd7ac6b2d9b90271dccaf4e74453b3b0aba5323ade0bcade60102a5c1')
 
 prepare() {
   [[ -d ${_realname}-${pkgver} ]] && rm -rf ${_realname}-${pkgver}
@@ -31,7 +30,6 @@ prepare() {
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   BUILD_EXTENSION=yes \
