teensy-loader-cli: update to 2.3

--- a/mingw-w64-teensy-loader-cli/PKGBUILD
+++ b/mingw-w64-teensy-loader-cli/PKGBUILD
@@ -3,13 +3,14 @@
 _realname=teensy_loader_cli
 pkgbase=mingw-w64-${_realname//_/-}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname//_/-}
-pkgver=2.2
-pkgrel=2
+pkgver=2.3
+pkgrel=1
 pkgdesc='Command line loader for PJRC Teensy microcontrollers (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.pjrc.com/teensy/loader_cli.html'
-license=('GPL3')
+msys2_repository_url="https://github.com/PaulStoffregen/teensy_loader_cli"
+license=('spdx:GPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-libusb-compat")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
 source=(
@@ -17,11 +18,9 @@ source=(
     01-libusb-compat-header.patch
     02-win32-checks.patch
 )
-sha256sums=(
-    '103c691f412d04906c4f46038c234d3e5f78322c1b78ded102df9f900724cd54'
-    '8feabd9bb57f6fb6836e5656995340495221e5b94a4af7434f1c7ec504a4d016'
-    '05ef2838758d7b98c586c1840052f57eedc79e1e360bf5daba7c4e7e173e8ea4'
-)
+sha256sums=('d9c5357d7e8b99e9a9ae93f5e921c35a133a4a5d399f57eec10f3a606be5d89f'
+            '8feabd9bb57f6fb6836e5656995340495221e5b94a4af7434f1c7ec504a4d016'
+            '05ef2838758d7b98c586c1840052f57eedc79e1e360bf5daba7c4e7e173e8ea4')
 
 prepare() {
     cd ${srcdir}/${_realname}-${pkgver}
