--- a/mingw-w64-python-pyzmq/PKGBUILD
+++ b/mingw-w64-python-pyzmq/PKGBUILD
@@ -3,60 +3,46 @@
 _realname=pyzmq
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=25.1.2
-pkgrel=3
+pkgver=26.2.0
+pkgrel=1
 pkgdesc="Python bindings for zeromq, written in Cython (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.zeromq.org/languages/python"
+msys2_repository_url="https://github.com/zeromq/pyzmq"
 msys2_references=(
   'pypi: pyzmq'
 )
-license=('spdx:LGPL-3.0-or-later' 'spdx:BSD-3-Clause')
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-zeromq")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-scikit-build-core"
              "${MINGW_PACKAGE_PREFIX}-python-packaging"
              "${MINGW_PACKAGE_PREFIX}-cython"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://github.com/zeromq/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "001-mingw-python.patch"
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "002-mingw-win-compat.patch")
-sha256sums=('4df6361aa20dad1572ef83b441d0ef43125e86e139b30e215cad95883166ee4d'
-            '47d65c3cc3d0f79c49f75afa0013b1b512484ad63534453248810607bfeceabf'
+sha256sums=('070672c258581c8e4f640b5159297580a9974b026043bd4ab0470be9ed324f1f'
             'c2e01fbdb3fc7c9eda0b5be128027536c6338b349eb1550da6067b3bde2acd3b')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
-  patch -p1 -i ${srcdir}/001-mingw-python.patch
   patch -p1 -i ${srcdir}/002-mingw-win-compat.patch
-
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build --zmq=${MINGW_PREFIX}
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
   cd "${srcdir}/python-build-${MSYSTEM}"
 
-  sed -i 's|except socket.error, e:|except socket.error as e:|' zmq/eventloop/ioloop.py
-  sed -i 's|except gevent.Timeout, t:|except gevent.Timeout as t:|' zmq/green/core.py
-
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install \
-    --prefix=${MINGW_PREFIX} --root=${pkgdir} --optimize=1 --skip-build
-
-  find "${pkgdir}/" -type d -empty -delete
-
-  rm -rf build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
   # fix absolute paths in config files
