python-prettytable: update to 3.12.0

--- a/mingw-w64-python-prettytable/PKGBUILD
+++ b/mingw-w64-python-prettytable/PKGBUILD
@@ -4,11 +4,11 @@ _pyname=PrettyTable
 _realname=prettytable
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.11.0
-pkgrel=2
+pkgver=3.12.0
+pkgrel=1
 pkgdesc="A simple Python library for easily displaying tabular data (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: prettytable'
 )
@@ -22,7 +22,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-cov")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('7e23ca1e68bbfd06ba8de98bf553bf3493264c96d5e8a615c0471025deeba722')
+sha256sums=('f04b3e1ba35747ac86e96ec33e3bb9748ce08e254dc2a1c6253945901beec804')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
