--- a/mingw-w64-python-cliff/PKGBUILD
+++ b/mingw-w64-python-cliff/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.8.0
 pkgrel=1
 pkgdesc="Command Line Interface Formulation Framewor (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-cliff'
   'pypi: cliff'
@@ -33,25 +33,6 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 #              "${MINGW_PACKAGE_PREFIX}-python-testscenarios")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
 sha256sums=('23eff502e603cf0aa841eaea6662a42cd3064169162b3e596b20226400e34dfd')
-
-# Helper macros to help make tasks easier #
-apply_patch_with_msg() {
-  for _patch in "$@"
-  do
-    msg2 "Applying $_patch"
-    patch -Nbp1 -i "${srcdir}/$_patch"
-  done
-}
-
-del_file_exists() {
-  for _fname in "$@"
-  do
-    if [ -f $_fname ]; then
-      rm -rf $_fname
-    fi
-  done
-}
-# =========================================== #
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
