--- a/mingw-w64-python-googleapis-common-protos/PKGBUILD
+++ b/mingw-w64-python-googleapis-common-protos/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=googleapis-common-protos
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.63.2
-pkgrel=2
+pkgver=1.66.0
+pkgrel=1
 pkgdesc='Python classes generated from the common protos in the googleapis repository (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,11 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 #optdepends=("${MINGW_PACKAGE_PREFIX}-python-grpcio")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('27c5abdffc4911f28101e635de1533fb4cfd2c37fbaa9174587c799fac90aa87')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
+sha256sums=('c3e7b33d15fdca5374cc0a7346dd92ffa847425cc4ea941d970f13680052ec8c')
 
 build() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname//-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
