python-greenlet: update to 3.1.1

--- a/mingw-w64-python-greenlet/PKGBUILD
+++ b/mingw-w64-python-greenlet/PKGBUILD
@@ -3,19 +3,16 @@
 _realname=greenlet
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=3.0.3
-pkgrel=2
+pkgver=3.1.1
+pkgrel=1
 pkgdesc="Lightweight in-process concurrent programming (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://greenlet.readthedocs.io"
+msys2_repository_url="https://github.com/python-greenlet/greenlet/"
 msys2_references=(
   'pypi: greenlet'
 )
-url="https://greenlet.readthedocs.io"
-msys2_repository_url="https://github.com/python-greenlet/greenlet/"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -23,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('43374442353259554ce33599da8b692d5aa96f8976d567d4badf263371fbe491')
+sha256sums=('4ce3ac6cdb6adf7946475d7ef31777c26d94bccc377e070a7986bd2d5c515467')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
